# sdd-hackathon-2

./: .md  README.md
cli-app/: .gitignore  README.md  pyproject.toml  test_functionality.py
cli-app/.specify/memory/: constitution.md
cli-app/history/prompts/001-todo-cli-app/: 1-create-todo-cli-app-spec.spec.prompt.md  1-generate-todo-cli-app-tasks.tasks.prompt.md  1-plan-todo-cli-app.plan.prompt.md
cli-app/history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
cli-app/specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
cli-app/specs/001-todo-cli-app/checklists/: requirements.md
cli-app/src/cli/: main.py
cli-app/src/models/: task.py
cli-app/src/services/: todo_service.py
cli-app/src/storage/: in_memory_store.py
cli-app/tests/integration/: test_todo_service.py  test_todo_service_update_delete.py
cli-app/tests/unit/: test_task.py
