[project]
name = "todo-cli-app"
version = "0.1.0"
description = "In-Memory Todo CLI Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
todo = "src.cli.main:main"
